2008-06-18  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-perl-data.c: Added support for output of both translated
	  and original (English) license text and for links to external
	  license text files.

2008-06-06  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-preferred-driver.in: Skip printers without printer
	  XML entry, to avoid that empty printer XML files get generated.

	* foomatic-compiledb.in: Simplify the generation of the list of
	  valid printer/driver combos even more.

2008-06-05  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-combo-xml.c: When supplying the "-C" option (overview
	  of all printer/driver combos for which a PPD file is available),
	  do not go through the printers without printer XML
	  entries (printers only mentioned in driver XML entries) as they
	  never have a valid PPD.

	  Consider a printer/driver combo also valid if the driver is
	  "Postscript" and in the <lang> section there is a <postscript>
	  section, independent whether the printer is listed in the
	  "Postscript" driver XML file.

	  In the driver XML file only copy the XML section for selected
	  printer into the emptied driver list if the section really
	  exists.

	  If we request an overview of only the printer/driver combos
	  which provide a valid PPD file ("-C" option for
	  foomatic-combo-xml) we do not list combos which have the
	  requested driver only defined in the <drivers> section of the
	  printer XML file (printer not in the driver list of the driver
	  XML file) and no ready-made PPD file

	  Strip white space from the name of the ready-made PPD file in
	  the printer enrty.

	  Let debug output show whether the selected printer/driver combo
	  is valid.

	  Bigger buffer for pseudo driver XML file for the case that the
	  driver is confirmed by an entry in the printer XML file and
	  there is no suitable driver XML file.

	  Corrected error message for an invalid printer/driver combo. It
	  caused a segfault.
